Basic implementation of compressor streambufs complete

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_FLAGS "-std=gnu++14 -Wall -Og -g")
 include_directories(".")
 add_library(util util.cpp)
 target_link_libraries(util magic)
-add_library(zsr zsr.cpp)
+add_library(zsr zsr.cpp compress.cpp)
 target_link_libraries(zsr util lzma pthread)
 add_executable(index index.cpp)
 target_link_libraries(index xapian util)
@@ -13,4 +13,6 @@ add_executable(zsrutil zsrutil.cpp)
 target_link_libraries(zsrutil zsr)
 add_executable(zsrsrv zsrsrv.cpp http.cpp Volume.cpp)
 target_link_libraries(zsrsrv util zsr mongoose xapian pthread)
+#add_executable(t test.cpp)
+#target_link_libraries(t util zsr)
 
