Rough working implementation of volume metadata replacing Xapian search

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ add_executable(index index.cpp)
 target_link_libraries(index xapian util)
 add_executable(zsrutil zsrutil.cpp)
 target_link_libraries(zsrutil zsr)
+add_executable(mkvol mkvol.cpp)
+target_link_libraries(mkvol zsr)
 add_executable(zsrsrv zsrsrv.cpp http.cpp Volume.cpp)
 target_link_libraries(zsrsrv util zsr mongoose xapian pthread)
 #add_executable(t test.cpp)
