Working implementation of global and per-file metadata and mkvol binary; about to add user data block

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,14 +7,12 @@ add_library(util util.cpp)
 target_link_libraries(util magic)
 add_library(zsr zsr.cpp compress.cpp)
 target_link_libraries(zsr util lzma pthread)
-add_executable(index index.cpp)
-target_link_libraries(index xapian util)
 add_executable(zsrutil zsrutil.cpp)
 target_link_libraries(zsrutil zsr)
 add_executable(mkvol mkvol.cpp)
 target_link_libraries(mkvol zsr)
 add_executable(zsrsrv zsrsrv.cpp http.cpp Volume.cpp)
-target_link_libraries(zsrsrv util zsr mongoose xapian pthread)
+target_link_libraries(zsrsrv util zsr mongoose pthread)
 #add_executable(t test.cpp)
 #target_link_libraries(t util zsr)
 
