Added FUSE archive mounter and initial implementation of user data

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ add_library(zsr zsr.cpp compress.cpp)
 target_link_libraries(zsr util lzma pthread)
 add_executable(zsrutil zsrutil.cpp)
 target_link_libraries(zsrutil zsr)
+add_executable(zsrmnt zsrmnt.cpp)
+target_link_libraries(zsrmnt zsr fuse)
 add_executable(mkvol mkvol.cpp)
 target_link_libraries(mkvol zsr)
 add_executable(zsrsrv zsrsrv.cpp http.cpp Volume.cpp)
