Partial implementation of symbolic links (everything except creation); zsrmnt is broken

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,9 @@
 cmake_minimum_required(VERSION 3.3)
 project(zsr-utils)
-set(VERSION 0.1)
+set(VERSION 0.2)
 set(CMAKE_CXX_FLAGS "-std=gnu++14 -Wall -Og -g")
 include_directories(".")
-add_library(util util.cpp)
-target_link_libraries(util magic)
+add_subdirectory(util)
 add_library(zsr zsr.cpp compress.cpp)
 target_link_libraries(zsr util lzma pthread)
 add_executable(zsrutil zsrutil.cpp)
