Moved web server resources into ZSR archive

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,12 @@ add_executable(zsrmnt zsrmnt.cpp)
 target_link_libraries(zsrmnt zsr fuse)
 add_executable(mkvol mkvol.cpp search.cpp)
 target_link_libraries(mkvol zsr)
+add_custom_command(
+	OUTPUT ${CMAKE_BINARY_DIR}/resources.zsr
+	DEPENDS zsrutil
+	COMMAND zsrutil c ${CMAKE_SOURCE_DIR}/resources ${CMAKE_BINARY_DIR}/resources.zsr)
+add_custom_target(resources DEPENDS ${CMAKE_BINARY_DIR}/resources.zsr)
 add_executable(zsrsrv zsrsrv.cpp search.cpp http.cpp Volume.cpp)
+add_dependencies(zsrsrv resources)
 target_link_libraries(zsrsrv util zsr mongoose pthread)
 
