Reimplemented Xapian support, disabled by default due to prohibitive size

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ add_executable(zsrutil zsrutil.cpp)
 target_link_libraries(zsrutil zsr)
 add_executable(zsrmnt zsrmnt.cpp)
 target_link_libraries(zsrmnt zsr fuse)
-add_executable(mkvol mkvol.cpp search.cpp Volume.cpp)
+add_executable(mkvol mkvol.cpp search.cpp Volume.cpp) # xapian
 target_link_libraries(mkvol zsr)
 add_custom_command(
 	OUTPUT ${CMAKE_BINARY_DIR}/resources.zsr
@@ -19,5 +19,5 @@ add_custom_command(
 add_custom_target(resources DEPENDS ${CMAKE_BINARY_DIR}/resources.zsr)
 add_executable(zsrsrv zsrsrv.cpp search.cpp Volume.cpp http.cpp)
 add_dependencies(zsrsrv resources)
-target_link_libraries(zsrsrv util zsr mongoose pthread)
+target_link_libraries(zsrsrv util zsr mongoose pthread) # xapian
 
