--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,14 +10,20 @@ add_executable(zsrutil zsrutil.cpp)
 target_link_libraries(zsrutil zsr)
 add_executable(zsrmnt zsrmnt.cpp)
 target_link_libraries(zsrmnt zsr fuse)
-add_executable(mkvol mkvol.cpp search.cpp Volume.cpp) # xapian
+add_custom_command(
+	OUTPUT ${CMAKE_BINARY_DIR}/fileinclude.cpp
+	OUTPUT ${CMAKE_BINARY_DIR}/fileinclude.h
+	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+	COMMAND util/fileinclude.sh ${CMAKE_BINARY_DIR}/fileinclude vollib.lua prefs.json
+)
+add_executable(mkvol mkvol.cpp search.cpp Volume.cpp build/fileinclude.cpp) # xapian
 target_link_libraries(mkvol zsr)
 add_custom_command(
 	OUTPUT ${CMAKE_BINARY_DIR}/resources.zsr
 	DEPENDS zsrutil
 	COMMAND zsrutil c ${CMAKE_SOURCE_DIR}/resources ${CMAKE_BINARY_DIR}/resources.zsr)
 add_custom_target(resources DEPENDS ${CMAKE_BINARY_DIR}/resources.zsr)
-add_executable(zsrsrv zsrsrv.cpp search.cpp Volume.cpp http.cpp)
+add_executable(zsrsrv zsrsrv.cpp search.cpp Volume.cpp http.cpp build/fileinclude.cpp)
 add_dependencies(zsrsrv resources)
 target_link_libraries(zsrsrv util zsr mongoose pthread) # xapian
 
