Moved source files into src

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,7 +21,7 @@ target_link_libraries(mkvol zsr)
 add_custom_command(
 	OUTPUT ${CMAKE_BINARY_DIR}/resources.zsr
 	DEPENDS zsrutil
-	COMMAND zsrutil c ${CMAKE_SOURCE_DIR}/resources ${CMAKE_BINARY_DIR}/resources.zsr ${CMAKE_SOURCE_DIR}/resources/info.lua)
+	COMMAND zsrutil c ${CMAKE_SOURCE_DIR}/../resources ${CMAKE_BINARY_DIR}/resources.zsr ${CMAKE_SOURCE_DIR}/../resources/info.lua)
 add_custom_target(resources DEPENDS ${CMAKE_BINARY_DIR}/resources.zsr)
 add_executable(zsrsrv zsrsrv.cpp search.cpp Volume.cpp http.cpp ${CMAKE_SOURCE_DIR}/fileinclude.cpp)
 add_dependencies(zsrsrv resources)
