--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "util"]
 	path = util
 	url = git@github.com:showermat/libutil.git
+[submodule "src/util"]
+	path = src/util
+	url = git@github.com:showermat/libutil.git
