Move ZSR library files into own directory

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ set(VERSION 0.2)
 set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -Og -g")
 include_directories(".")
 add_subdirectory(util)
-add_library(zsr zsr.cpp compress.cpp)
+add_library(zsr zsr/zsr.cpp zsr/compress.cpp zsr/writer.cpp)
 target_link_libraries(zsr util lzma pthread)
 add_executable(zsrutil zsrutil.cpp)
 target_link_libraries(zsrutil zsr)
