Split mediawiki.py contents, use libxml2 for title and encoding extraction, check bounds on mmap reads

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,11 @@
-cmake_minimum_required(VERSION 3.3)
+cmake_minimum_required(VERSION 3.12)
 project(zsr-utils)
 set(VERSION 0.2)
-set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -Og -g")
-include_directories(".")
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_CXX_FLAGS "-Wall")
+include_directories("." "/usr/include/libxml2")
 add_subdirectory(util)
 add_library(zsr zsr/zsr.cpp zsr/compress.cpp zsr/writer.cpp)
 target_link_libraries(zsr util lzma pthread)
