--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_FLAGS "-Wall")
 include_directories("." "/usr/include/libxml2")
+include_directories("." "../lib/json/include")
 add_subdirectory(util)
 add_library(zsr zsr/zsr.cpp zsr/compress.cpp zsr/writer.cpp)
 target_link_libraries(zsr util lzma pthread)
