Switch embedded HTTP server from Mongoose to Onion

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,4 +30,4 @@ add_custom_command(
 add_custom_target(resources DEPENDS ${CMAKE_BINARY_DIR}/resources.zsr)
 add_executable(zsrsrv zsrsrv.cpp search.cpp Volume.cpp http.cpp ${CMAKE_SOURCE_DIR}/fileinclude.cpp)
 add_dependencies(zsrsrv resources)
-target_link_libraries(zsrsrv util zsr mongoose pthread) # xapian
+target_link_libraries(zsrsrv util zsr onion pthread) # xapian
