--- a/mkvol/Cargo.toml
+++ b/mkvol/Cargo.toml
@@ -16,6 +16,8 @@ html-escape = "0.2"
 lazy_static = "1.4"
 magic = "0.12"
 mime_guess = "2.0"
-mlua = { version = "0.4", features = ["lua54", "vendored"] }
+mlua = { version = "0.4", features = ["lua54", "send", "vendored"] }
 regex = "1.3"
+std-semaphore = "0.1"
 squashfs = { path = "../../squashfs-rs" }
+threadpool = "1.8"
