--- a/sqsrv/Cargo.toml
+++ b/sqsrv/Cargo.toml
@@ -18,4 +18,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.8"
 squashfs = { path = "../../squashfs-rs" }
+strsim = "0.10"
 thiserror = "1.0"
+walkdir = "2.3"
