--- a/mkvol/Cargo.toml
+++ b/mkvol/Cargo.toml
@@ -18,6 +18,7 @@ magic = "0.12"
 mime_guess = "2.0"
 mlua = { version = "0.4", features = ["lua54", "send", "vendored"] }
 regex = "1.3"
+signal-hook = "0.3"
 std-semaphore = "0.1"
 squashfs = { path = "../../squashfs-rs" }
 threadpool = "1.8"
