--- a/mkvol/Cargo.toml
+++ b/mkvol/Cargo.toml
@@ -2,9 +2,7 @@
 name = "mkvol"
 version = "0.1.0"
 authors = ["Matthew Schauer <matthew.schauer@e10x.net>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
@@ -20,5 +18,5 @@ mlua = { version = "0.4", features = ["lua54", "send", "vendored"] }
 regex = "1.3"
 signal-hook = "0.3"
 std-semaphore = "0.1"
-squashfs = { path = "../../squashfs-rs" }
+squashfs-ng = "0.1"
 threadpool = "1.8"
