--- a/sqsrv/Cargo.toml
+++ b/sqsrv/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "sqsrv"
-version = "0.4.0"
+version = "0.4.1"
 authors = ["Matthew Schauer <matthew.schauer@e10x.net>"]
-edition = "2018"
+edition = "2021"
 
 [dependencies]
 bytesize = "1.0"
@@ -17,7 +17,7 @@ rocket = { version = "0.4", features = ["tls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.8"
-squashfs = { path = "../../squashfs-rs" }
+squashfs-ng = "0.1"
 strsim = "0.10"
 thiserror = "1.0"
 walkdir = "2.3"
